--- a/hypr/.config/hypr/hyprpaper.conf
+++ b/hypr/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = /home/wallpaper.png
-wallpaper = ,/home/wallpaper.png
+preload = /home/liv/wallpaper.png
+wallpaper = ,/home/liv/wallpaper.png
